--- a/config.json
+++ b/config.json
@@ -1,19 +1,13 @@
 {
   "base_url": "https://wutali-nextjs-netlify-blog.netlify.app",
-  "site_title": "Next.js Netlify Blog",
-  "site_description": "Next.js blog template for Netlify",
+  "site_title": "KIIT Confessions",
+  "site_description": "This is the official site of KIIT Confessions",
   "site_keywords": [
-    {
-      "keyword": "Next.js"
-    },
-    {
-      "keyword": "Netlify"
-    },
-    {
-      "keyword": "React"
-    }
+    "KIIT Confessions",
+    "Confessions of KIIT",
+    "kiit confessions"
   ],
   "posts_per_page": 5,
-  "twitter_account": "@my-account",
-  "github_account": "wutali"
+  "twitter_account": "@biswasrahul16",
+  "github_account": "rbiswas-mirp"
 }
